Сделал Desctop главной страницы

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
   @include('partials/header.html')
   <main>
     @include('partials/hero.html')
+    @include('partials/offers.html')
+    @include('partials/rating.html')
+    @include('partials/collection.html')
+    @include('partials/categories.html')
+    @include('partials/useful.html')
+    @include('partials/form.html')
   </main>
   @include('partials/footer.html')
 </body>
